Termination Policies support
